[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cEBMF"
version = "0.0.1"
description = "Implementation of the covariate Empirical Bayes Matrix Factorization method"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [{ name = "William R.P. Denault", email = "wdenault@uchicago.edu" }]
maintainers = [{ name = "William R.P. Denault", email = "wdenault@uchicago.edu" }]

dependencies = [
  "rpy2>=3.0",
  "numpy",
  "fancyimpute",
  "matplotlib",
  "scikit-learn",
  "scipy",
  "tensorflow"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/william-denault/cEBMF"

[project.optional-dependencies]
dev = ["pytest>=7.0", "twine>=4.0.2"]
r = ["rpy2>=3.0"]

# Tell setuptools to find packages under src/
[tool.setuptools.packages.find]
where = ["src"]

# (Optional) include non-Python files from your package
[tool.setuptools.package-data]
"cEBMF" = ["data/**"]
