[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cebmf"  # lowercase matches folder name and PyPI package name
version = "0.0.1"
description = "Implementation of the covariate Empirical Bayes Matrix Factorization method"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [{ name = "William R.P. Denault", email = "wdenault@uchicago.edu" }]
maintainers = [{ name = "William R.P. Denault", email = "wdenault@uchicago.edu" }]

dependencies = [
  "rpy2>=3.0",
  "numpy",
  "fancyimpute",
  "matplotlib",
  "scikit-learn",
  "scipy",
  "tensorflow"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research"
]

[project.urls]
Homepage = "https://github.com/william-denault/cEBMF"

[project.optional-dependencies]
dev = ["pytest>=7.0", "twine>=4.0.2"]
r = ["rpy2>=3.0"]

[tool.setuptools]
include-package-data = true  # ensures package_data gets included in wheels

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cebmf" = ["data/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]

